--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           ./cc-test-reporter before-build
           make test
-          ./cc-test-reporter after-build --coverage-input-type CoveragePy
+          ./cc-test-reporter after-build 
     
 
 
